# python-template-uv

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
