[project]
name = "python-template-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["Roman Poltorabatko <r.m.poltorabatko@gmail.com>"]
license = "MIT"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = false

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
