[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
app = "app.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.2",
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "FAST",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "A",
    "COM",
    "C4",
    "EXE",
    "INT",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "TC",
    "FLY",
    "I",
    "PERF",
    "W",
    "UP",
    "FURB",
    "RUF"
]
ignore = [
    "E741", # https://docs.astral.sh/ruff/rules/ambiguous-variable-name/
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
    "FAST003", # https://docs.astral.sh/ruff/rules/fast-api-unused-path-parameter/
    "ANN401", # https://docs.astral.sh/ruff/rules/any-type/
    "S101", # https://docs.astral.sh/ruff/rules/assert/
    "S110", # https://docs.astral.sh/ruff/rules/try-except-pass/
    "S311", # https://docs.astral.sh/ruff/rules/suspicious-non-cryptographic-random-usage/
    "B904", # https://docs.astral.sh/ruff/rules/raise-without-from-inside-except/
    "PT012", # https://docs.astral.sh/ruff/rules/pytest-raises-with-multiple-statements/
    "PT011", # https://docs.astral.sh/ruff/rules/pytest-raises-too-broad/
    "SIM115", # https://docs.astral.sh/ruff/rules/open-file-with-context-handler/
    "RUF001", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-string/
    "RUF002", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-docstring/
    "RUF003", # https://docs.astral.sh/ruff/rules/ambiguous-unicode-character-comment/
    "RUF018", # https://docs.astral.sh/ruff/rules/assignment-in-assert/
    "RUF012", # https://docs.astral.sh/ruff/rules/mutable-class-default/
]
